--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,11 +13,11 @@ archive: true
     </section>
 </article>
 <footer id="post-meta" class="clearfix">
-    <a href="http://twitter.com/{{ site.authorTwitter }}">
-        <img class="avatar" src="{{ site.baseurl }}assets/images/avatar.png">
+    <a href="http://twitter.com/{{ page.author_twitter }}">
+		<img class=avatar src="http://www.gravatar.com/avatar/{{ page.author_gravatar }}?s=40">
         <div>
-            <span class="dark">{{ site.author }}</span>
-            <span>{{ site.description }}</span>
+            <span class="dark">{{ page.author }}</span>
+            <span>Author</span>
         </div>
     </a>
 
